@@ -1,5 +1,5 @@
 /* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2019 Joël Krähemann
+ * Copyright (C) 2005-2020 Joël Krähemann
  *
  * This file is part of GSequencer.
  *
@@ -24,6 +24,8 @@
 
 #include <gdk/gdk.h>
 #include <pango/pangocairo.h>
+
+#include <gst/gst.h>
 
 #include <gtk/gtk.h>
 
@@ -163,6 +165,8 @@ main(int argc, char **argv)
   xmlInitParser();
   
   //ao_initialize();
+
+  gst_init (&argc, &argv);
 
   //  gdk_threads_enter();
   //  g_thread_init(NULL);
