@@ -1,3 +1,8 @@
+ags (3.6.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented GStreamer support?
+
 ags (3.5.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
